tests/fixtures/positive/architecture/module-dependency-cycle/settings.gradle.kts
rootProject.name = "module-dependency-cycle-positive"

include(":a", ":b", ":c")
