tests/fixtures/negative/architecture/module-dependency-cycle/settings.gradle.kts
rootProject.name = "module-dependency-cycle-negative"

include(":a", ":b", ":c")
